@@ -676,7 +676,6 @@ function create_mon_trigger_menu(e, args, items){
 //	for(var i=0; i < items.length; i++){
 	for(var itemid in items){
 		if(!isset(itemid, items)) continue;
-
 		tr_menu.push([items[itemid].description,'history.php?action='+items[itemid].action+'&itemid='+items[itemid].itemid,null]);
 	}
 
