@@ -10,6 +10,7 @@ Changes for 1.9
 
 Changes for 1.8.4rc1
 
+ - [ZBX-1292] item names are now prefixed with host names, if they are from different hosts in trigger discription popup (KB)
  - [ZBX-2844] added HTML escaping of screen names in combox box output in monitoring (KB)
  - [ZBXNEXT-373] added support for NTLM authentication to Web monitoring (asaveljevs,Vedmak)
  - [ZBX-1486] when multiple map elements are selected, pressing "Remove" in editing form removes all selected elements (KB)
